parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> funcMain
Rule 2     program -> funcList
Rule 3     funcList -> func
Rule 4     funcList -> funcList func
Rule 5     func -> FUN ID LPAREN argList RPAREN varList statementList
Rule 6     funcMain -> FUN ID LPAREN RPAREN varList statementList
Rule 7     statementList -> statement
Rule 8     statementList -> statement SEMICOLON statementList
Rule 9     statement -> BEGIN statementList END
Rule 10    statement -> BREAK
Rule 11    statement -> SKIP
Rule 12    statement -> ID LPAREN exprList RPAREN
Rule 13    statement -> RETURN expr
Rule 14    statement -> READ LPAREN location RPAREN
Rule 15    statement -> WRITE LPAREN expr RPAREN
Rule 16    statement -> PRINT LPAREN STRING RPAREN
Rule 17    statement -> ID ASSIGN expr
Rule 18    statement -> IF relation THEN statement ELSE statement
Rule 19    statement -> IF relation THEN statement
Rule 20    statement -> WHILE relation DO statement
Rule 21    relation -> LPAREN relation RPAREN
Rule 22    relation -> NOT relation
Rule 23    relation -> relation OR relation
Rule 24    relation -> relation AND relation
Rule 25    relation -> expr NEQ expr
Rule 26    relation -> expr EQ expr
Rule 27    relation -> expr GT expr
Rule 28    relation -> expr GTE expr
Rule 29    relation -> expr LT expr
Rule 30    relation -> expr LTE expr
Rule 31    exprList -> expr
Rule 32    exprList -> expr COMMA exprList
Rule 33    expr -> TFLOAT LPAREN expr RPAREN
Rule 34    expr -> TINT LPAREN expr RPAREN
Rule 35    expr -> number
Rule 36    expr -> ID LBRACKET expr RBRACKET
Rule 37    expr -> ID
Rule 38    expr -> ID LPAREN exprList RPAREN
Rule 39    expr -> LPAREN expr RPAREN
Rule 40    expr -> PLUS expr
Rule 41    expr -> MINUS expr
Rule 42    expr -> expr DIVIDE expr
Rule 43    expr -> expr TIMES expr
Rule 44    expr -> expr MINUS expr
Rule 45    expr -> expr PLUS expr
Rule 46    argList -> var
Rule 47    argList -> var COMMA argList
Rule 48    varList -> var
Rule 49    varList -> var varList
Rule 50    var -> ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
Rule 51    var -> ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
Rule 52    var -> ID COLON TFLOAT SEMICOLON
Rule 53    var -> ID COLON TINT SEMICOLON
Rule 54    number -> MINUS FLOAT
Rule 55    number -> MINUS INT
Rule 56    number -> FLOAT
Rule 57    number -> INT
Rule 58    location -> ID LBRACKET ID RBRACKET
Rule 59    location -> ID LBRACKET INT RBRACKET
Rule 60    location -> ID

Unused terminals:

    RBRACE
    EOF
    LBRACE

Terminals, with rules where they appear:

AND                  : 24
ASSIGN               : 17
BEGIN                : 9
BREAK                : 10
COLON                : 50 51 52 53
COMMA                : 32 47
DIVIDE               : 42
DO                   : 20
ELSE                 : 18
END                  : 9
EOF                  : 
EQ                   : 26
FLOAT                : 54 56
FUN                  : 5 6
GT                   : 27
GTE                  : 28
ID                   : 5 6 12 17 36 37 38 50 51 52 53 58 58 59 60
IF                   : 18 19
INT                  : 50 51 55 57 59
LBRACE               : 
LBRACKET             : 36 50 51 58 59
LPAREN               : 5 6 12 14 15 16 21 33 34 38 39
LT                   : 29
LTE                  : 30
MINUS                : 41 44 54 55
NEQ                  : 25
NOT                  : 22
OR                   : 23
PLUS                 : 40 45
PRINT                : 16
RBRACE               : 
RBRACKET             : 36 50 51 58 59
READ                 : 14
RETURN               : 13
RPAREN               : 5 6 12 14 15 16 21 33 34 38 39
SEMICOLON            : 8 50 51 52 53
SKIP                 : 11
STRING               : 16
TFLOAT               : 33 50 52
THEN                 : 18 19
TIMES                : 43
TINT                 : 34 51 53
WHILE                : 20
WRITE                : 15
error                : 

Nonterminals, with rules where they appear:

argList              : 5 47
expr                 : 13 15 17 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 34 36 39 40 41 42 42 43 43 44 44 45 45
exprList             : 12 32 38
func                 : 3 4
funcList             : 2 4
funcMain             : 1
location             : 14
number               : 35
program              : 0
relation             : 18 19 20 21 22 23 23 24 24
statement            : 7 8 18 18 19 20
statementList        : 5 6 8 9
var                  : 46 47 48 49
varList              : 5 6 49


state 0

    (0) S' -> . program
    (1) program -> . funcMain
    (2) program -> . funcList
    (6) funcMain -> . FUN ID LPAREN RPAREN varList statementList
    (3) funcList -> . func
    (4) funcList -> . funcList func
    (5) func -> . FUN ID LPAREN argList RPAREN varList statementList
    FUN             shift and go to state 4

    program                        shift and go to state 1
    funcMain                       shift and go to state 2
    funcList                       shift and go to state 3
    func                           shift and go to state 5

state 1

    (0) S' -> program .


state 2

    (1) program -> funcMain .
    $end            reduce using rule 1 (program -> funcMain .)


state 3

    (2) program -> funcList .
    (4) funcList -> funcList . func
    (5) func -> . FUN ID LPAREN argList RPAREN varList statementList
    $end            reduce using rule 2 (program -> funcList .)
    FUN             shift and go to state 7

    func                           shift and go to state 6

state 4

    (6) funcMain -> FUN . ID LPAREN RPAREN varList statementList
    (5) func -> FUN . ID LPAREN argList RPAREN varList statementList
    ID              shift and go to state 8


state 5

    (3) funcList -> func .
    FUN             reduce using rule 3 (funcList -> func .)
    $end            reduce using rule 3 (funcList -> func .)


state 6

    (4) funcList -> funcList func .
    FUN             reduce using rule 4 (funcList -> funcList func .)
    $end            reduce using rule 4 (funcList -> funcList func .)


state 7

    (5) func -> FUN . ID LPAREN argList RPAREN varList statementList
    ID              shift and go to state 9


state 8

    (6) funcMain -> FUN ID . LPAREN RPAREN varList statementList
    (5) func -> FUN ID . LPAREN argList RPAREN varList statementList
    LPAREN          shift and go to state 10


state 9

    (5) func -> FUN ID . LPAREN argList RPAREN varList statementList
    LPAREN          shift and go to state 11


state 10

    (6) funcMain -> FUN ID LPAREN . RPAREN varList statementList
    (5) func -> FUN ID LPAREN . argList RPAREN varList statementList
    (46) argList -> . var
    (47) argList -> . var COMMA argList
    (50) var -> . ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> . ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> . ID COLON TFLOAT SEMICOLON
    (53) var -> . ID COLON TINT SEMICOLON
    RPAREN          shift and go to state 13
    ID              shift and go to state 12

    argList                        shift and go to state 14
    var                            shift and go to state 15

state 11

    (5) func -> FUN ID LPAREN . argList RPAREN varList statementList
    (46) argList -> . var
    (47) argList -> . var COMMA argList
    (50) var -> . ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> . ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> . ID COLON TFLOAT SEMICOLON
    (53) var -> . ID COLON TINT SEMICOLON
    ID              shift and go to state 12

    argList                        shift and go to state 14
    var                            shift and go to state 15

state 12

    (50) var -> ID . COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> ID . COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> ID . COLON TFLOAT SEMICOLON
    (53) var -> ID . COLON TINT SEMICOLON
    COLON           shift and go to state 16


state 13

    (6) funcMain -> FUN ID LPAREN RPAREN . varList statementList
    (48) varList -> . var
    (49) varList -> . var varList
    (50) var -> . ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> . ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> . ID COLON TFLOAT SEMICOLON
    (53) var -> . ID COLON TINT SEMICOLON
    ID              shift and go to state 12

    varList                        shift and go to state 17
    var                            shift and go to state 18

state 14

    (5) func -> FUN ID LPAREN argList . RPAREN varList statementList
    RPAREN          shift and go to state 19


state 15

    (46) argList -> var .
    (47) argList -> var . COMMA argList
    RPAREN          reduce using rule 46 (argList -> var .)
    COMMA           shift and go to state 20


state 16

    (50) var -> ID COLON . TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> ID COLON . TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> ID COLON . TFLOAT SEMICOLON
    (53) var -> ID COLON . TINT SEMICOLON
    TFLOAT          shift and go to state 21
    TINT            shift and go to state 22


state 17

    (6) funcMain -> FUN ID LPAREN RPAREN varList . statementList
    (7) statementList -> . statement
    (8) statementList -> . statement SEMICOLON statementList
    (9) statement -> . BEGIN statementList END
    (10) statement -> . BREAK
    (11) statement -> . SKIP
    (12) statement -> . ID LPAREN exprList RPAREN
    (13) statement -> . RETURN expr
    (14) statement -> . READ LPAREN location RPAREN
    (15) statement -> . WRITE LPAREN expr RPAREN
    (16) statement -> . PRINT LPAREN STRING RPAREN
    (17) statement -> . ID ASSIGN expr
    (18) statement -> . IF relation THEN statement ELSE statement
    (19) statement -> . IF relation THEN statement
    (20) statement -> . WHILE relation DO statement
    BEGIN           shift and go to state 26
    BREAK           shift and go to state 27
    SKIP            shift and go to state 28
    ID              shift and go to state 23
    RETURN          shift and go to state 29
    READ            shift and go to state 30
    WRITE           shift and go to state 31
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34

    statementList                  shift and go to state 24
    statement                      shift and go to state 25

state 18

    (48) varList -> var .
    (49) varList -> var . varList
    (48) varList -> . var
    (49) varList -> . var varList
    (50) var -> . ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> . ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> . ID COLON TFLOAT SEMICOLON
    (53) var -> . ID COLON TINT SEMICOLON
  ! shift/reduce conflict for ID resolved as shift
    BEGIN           reduce using rule 48 (varList -> var .)
    BREAK           reduce using rule 48 (varList -> var .)
    SKIP            reduce using rule 48 (varList -> var .)
    RETURN          reduce using rule 48 (varList -> var .)
    READ            reduce using rule 48 (varList -> var .)
    WRITE           reduce using rule 48 (varList -> var .)
    PRINT           reduce using rule 48 (varList -> var .)
    IF              reduce using rule 48 (varList -> var .)
    WHILE           reduce using rule 48 (varList -> var .)
    ID              shift and go to state 12

    var                            shift and go to state 18
    varList                        shift and go to state 35

state 19

    (5) func -> FUN ID LPAREN argList RPAREN . varList statementList
    (48) varList -> . var
    (49) varList -> . var varList
    (50) var -> . ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> . ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> . ID COLON TFLOAT SEMICOLON
    (53) var -> . ID COLON TINT SEMICOLON
    ID              shift and go to state 12

    varList                        shift and go to state 36
    var                            shift and go to state 18

state 20

    (47) argList -> var COMMA . argList
    (46) argList -> . var
    (47) argList -> . var COMMA argList
    (50) var -> . ID COLON TFLOAT LBRACKET INT RBRACKET SEMICOLON
    (51) var -> . ID COLON TINT LBRACKET INT RBRACKET SEMICOLON
    (52) var -> . ID COLON TFLOAT SEMICOLON
    (53) var -> . ID COLON TINT SEMICOLON
    ID              shift and go to state 12

    var                            shift and go to state 15
    argList                        shift and go to state 37

state 21

    (50) var -> ID COLON TFLOAT . LBRACKET INT RBRACKET SEMICOLON
    (52) var -> ID COLON TFLOAT . SEMICOLON
    LBRACKET        shift and go to state 38
    SEMICOLON       shift and go to state 39


state 22

    (51) var -> ID COLON TINT . LBRACKET INT RBRACKET SEMICOLON
    (53) var -> ID COLON TINT . SEMICOLON
    LBRACKET        shift and go to state 40
    SEMICOLON       shift and go to state 41


state 23

    (12) statement -> ID . LPAREN exprList RPAREN
    (17) statement -> ID . ASSIGN expr
    LPAREN          shift and go to state 42
    ASSIGN          shift and go to state 43


state 24

    (6) funcMain -> FUN ID LPAREN RPAREN varList statementList .
    $end            reduce using rule 6 (funcMain -> FUN ID LPAREN RPAREN varList statementList .)


state 25

    (7) statementList -> statement .
    (8) statementList -> statement . SEMICOLON statementList
    $end            reduce using rule 7 (statementList -> statement .)
    END             reduce using rule 7 (statementList -> statement .)
    FUN             reduce using rule 7 (statementList -> statement .)
    SEMICOLON       shift and go to state 44


state 26

    (9) statement -> BEGIN . statementList END
    (7) statementList -> . statement
    (8) statementList -> . statement SEMICOLON statementList
    (9) statement -> . BEGIN statementList END
    (10) statement -> . BREAK
    (11) statement -> . SKIP
    (12) statement -> . ID LPAREN exprList RPAREN
    (13) statement -> . RETURN expr
    (14) statement -> . READ LPAREN location RPAREN
    (15) statement -> . WRITE LPAREN expr RPAREN
    (16) statement -> . PRINT LPAREN STRING RPAREN
    (17) statement -> . ID ASSIGN expr
    (18) statement -> . IF relation THEN statement ELSE statement
    (19) statement -> . IF relation THEN statement
    (20) statement -> . WHILE relation DO statement
    BEGIN           shift and go to state 26
    BREAK           shift and go to state 27
    SKIP            shift and go to state 28
    ID              shift and go to state 23
    RETURN          shift and go to state 29
    READ            shift and go to state 30
    WRITE           shift and go to state 31
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34

    statementList                  shift and go to state 45
    statement                      shift and go to state 25

state 27

    (10) statement -> BREAK .
    SEMICOLON       reduce using rule 10 (statement -> BREAK .)
    $end            reduce using rule 10 (statement -> BREAK .)
    END             reduce using rule 10 (statement -> BREAK .)
    FUN             reduce using rule 10 (statement -> BREAK .)
    ELSE            reduce using rule 10 (statement -> BREAK .)


state 28

    (11) statement -> SKIP .
    SEMICOLON       reduce using rule 11 (statement -> SKIP .)
    $end            reduce using rule 11 (statement -> SKIP .)
    END             reduce using rule 11 (statement -> SKIP .)
    FUN             reduce using rule 11 (statement -> SKIP .)
    ELSE            reduce using rule 11 (statement -> SKIP .)


state 29

    (13) statement -> RETURN . expr
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    LPAREN          shift and go to state 48
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    expr                           shift and go to state 46
    number                         shift and go to state 50

state 30

    (14) statement -> READ . LPAREN location RPAREN
    LPAREN          shift and go to state 56


state 31

    (15) statement -> WRITE . LPAREN expr RPAREN
    LPAREN          shift and go to state 57


state 32

    (16) statement -> PRINT . LPAREN STRING RPAREN
    LPAREN          shift and go to state 58


state 33

    (18) statement -> IF . relation THEN statement ELSE statement
    (19) statement -> IF . relation THEN statement
    (21) relation -> . LPAREN relation RPAREN
    (22) relation -> . NOT relation
    (23) relation -> . relation OR relation
    (24) relation -> . relation AND relation
    (25) relation -> . expr NEQ expr
    (26) relation -> . expr EQ expr
    (27) relation -> . expr GT expr
    (28) relation -> . expr GTE expr
    (29) relation -> . expr LT expr
    (30) relation -> . expr LTE expr
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    LPAREN          shift and go to state 60
    NOT             shift and go to state 61
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    relation                       shift and go to state 59
    expr                           shift and go to state 62
    number                         shift and go to state 50

state 34

    (20) statement -> WHILE . relation DO statement
    (21) relation -> . LPAREN relation RPAREN
    (22) relation -> . NOT relation
    (23) relation -> . relation OR relation
    (24) relation -> . relation AND relation
    (25) relation -> . expr NEQ expr
    (26) relation -> . expr EQ expr
    (27) relation -> . expr GT expr
    (28) relation -> . expr GTE expr
    (29) relation -> . expr LT expr
    (30) relation -> . expr LTE expr
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    LPAREN          shift and go to state 60
    NOT             shift and go to state 61
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    relation                       shift and go to state 63
    expr                           shift and go to state 62
    number                         shift and go to state 50

state 35

    (49) varList -> var varList .
    BEGIN           reduce using rule 49 (varList -> var varList .)
    BREAK           reduce using rule 49 (varList -> var varList .)
    SKIP            reduce using rule 49 (varList -> var varList .)
    ID              reduce using rule 49 (varList -> var varList .)
    RETURN          reduce using rule 49 (varList -> var varList .)
    READ            reduce using rule 49 (varList -> var varList .)
    WRITE           reduce using rule 49 (varList -> var varList .)
    PRINT           reduce using rule 49 (varList -> var varList .)
    IF              reduce using rule 49 (varList -> var varList .)
    WHILE           reduce using rule 49 (varList -> var varList .)


state 36

    (5) func -> FUN ID LPAREN argList RPAREN varList . statementList
    (7) statementList -> . statement
    (8) statementList -> . statement SEMICOLON statementList
    (9) statement -> . BEGIN statementList END
    (10) statement -> . BREAK
    (11) statement -> . SKIP
    (12) statement -> . ID LPAREN exprList RPAREN
    (13) statement -> . RETURN expr
    (14) statement -> . READ LPAREN location RPAREN
    (15) statement -> . WRITE LPAREN expr RPAREN
    (16) statement -> . PRINT LPAREN STRING RPAREN
    (17) statement -> . ID ASSIGN expr
    (18) statement -> . IF relation THEN statement ELSE statement
    (19) statement -> . IF relation THEN statement
    (20) statement -> . WHILE relation DO statement
    BEGIN           shift and go to state 26
    BREAK           shift and go to state 27
    SKIP            shift and go to state 28
    ID              shift and go to state 23
    RETURN          shift and go to state 29
    READ            shift and go to state 30
    WRITE           shift and go to state 31
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34

    statementList                  shift and go to state 64
    statement                      shift and go to state 25

state 37

    (47) argList -> var COMMA argList .
    RPAREN          reduce using rule 47 (argList -> var COMMA argList .)


state 38

    (50) var -> ID COLON TFLOAT LBRACKET . INT RBRACKET SEMICOLON
    INT             shift and go to state 65


state 39

    (52) var -> ID COLON TFLOAT SEMICOLON .
    COMMA           reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    RPAREN          reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    ID              reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    BEGIN           reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    BREAK           reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    SKIP            reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    RETURN          reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    READ            reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    WRITE           reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    PRINT           reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    IF              reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)
    WHILE           reduce using rule 52 (var -> ID COLON TFLOAT SEMICOLON .)


state 40

    (51) var -> ID COLON TINT LBRACKET . INT RBRACKET SEMICOLON
    INT             shift and go to state 66


state 41

    (53) var -> ID COLON TINT SEMICOLON .
    COMMA           reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    RPAREN          reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    ID              reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    BEGIN           reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    BREAK           reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    SKIP            reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    RETURN          reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    READ            reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    WRITE           reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    PRINT           reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    IF              reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)
    WHILE           reduce using rule 53 (var -> ID COLON TINT SEMICOLON .)


state 42

    (12) statement -> ID LPAREN . exprList RPAREN
    (31) exprList -> . expr
    (32) exprList -> . expr COMMA exprList
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    LPAREN          shift and go to state 48
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    exprList                       shift and go to state 67
    expr                           shift and go to state 68
    number                         shift and go to state 50

state 43

    (17) statement -> ID ASSIGN . expr
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    LPAREN          shift and go to state 48
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    expr                           shift and go to state 69
    number                         shift and go to state 50

state 44

    (8) statementList -> statement SEMICOLON . statementList
    (7) statementList -> . statement
    (8) statementList -> . statement SEMICOLON statementList
    (9) statement -> . BEGIN statementList END
    (10) statement -> . BREAK
    (11) statement -> . SKIP
    (12) statement -> . ID LPAREN exprList RPAREN
    (13) statement -> . RETURN expr
    (14) statement -> . READ LPAREN location RPAREN
    (15) statement -> . WRITE LPAREN expr RPAREN
    (16) statement -> . PRINT LPAREN STRING RPAREN
    (17) statement -> . ID ASSIGN expr
    (18) statement -> . IF relation THEN statement ELSE statement
    (19) statement -> . IF relation THEN statement
    (20) statement -> . WHILE relation DO statement
    BEGIN           shift and go to state 26
    BREAK           shift and go to state 27
    SKIP            shift and go to state 28
    ID              shift and go to state 23
    RETURN          shift and go to state 29
    READ            shift and go to state 30
    WRITE           shift and go to state 31
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34

    statement                      shift and go to state 25
    statementList                  shift and go to state 70

state 45

    (9) statement -> BEGIN statementList . END
    END             shift and go to state 71


state 46

    (13) statement -> RETURN expr .
    (42) expr -> expr . DIVIDE expr
    (43) expr -> expr . TIMES expr
    (44) expr -> expr . MINUS expr
    (45) expr -> expr . PLUS expr
    SEMICOLON       reduce using rule 13 (statement -> RETURN expr .)
    $end            reduce using rule 13 (statement -> RETURN expr .)
    END             reduce using rule 13 (statement -> RETURN expr .)
    FUN             reduce using rule 13 (statement -> RETURN expr .)
    ELSE            reduce using rule 13 (statement -> RETURN expr .)
    DIVIDE          shift and go to state 72
    TIMES           shift and go to state 73
    MINUS           shift and go to state 74
    PLUS            shift and go to state 75


state 47

    (33) expr -> TFLOAT . LPAREN expr RPAREN
    LPAREN          shift and go to state 76


state 48

    (39) expr -> LPAREN . expr RPAREN
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    LPAREN          shift and go to state 48
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    expr                           shift and go to state 77
    number                         shift and go to state 50

state 49

    (34) expr -> TINT . LPAREN expr RPAREN
    LPAREN          shift and go to state 78


state 50

    (35) expr -> number .
    DIVIDE          reduce using rule 35 (expr -> number .)
    TIMES           reduce using rule 35 (expr -> number .)
    MINUS           reduce using rule 35 (expr -> number .)
    PLUS            reduce using rule 35 (expr -> number .)
    SEMICOLON       reduce using rule 35 (expr -> number .)
    $end            reduce using rule 35 (expr -> number .)
    END             reduce using rule 35 (expr -> number .)
    FUN             reduce using rule 35 (expr -> number .)
    ELSE            reduce using rule 35 (expr -> number .)
    NEQ             reduce using rule 35 (expr -> number .)
    EQ              reduce using rule 35 (expr -> number .)
    GT              reduce using rule 35 (expr -> number .)
    GTE             reduce using rule 35 (expr -> number .)
    LT              reduce using rule 35 (expr -> number .)
    LTE             reduce using rule 35 (expr -> number .)
    COMMA           reduce using rule 35 (expr -> number .)
    RPAREN          reduce using rule 35 (expr -> number .)
    RBRACKET        reduce using rule 35 (expr -> number .)
    THEN            reduce using rule 35 (expr -> number .)
    OR              reduce using rule 35 (expr -> number .)
    AND             reduce using rule 35 (expr -> number .)
    DO              reduce using rule 35 (expr -> number .)


state 51

    (36) expr -> ID . LBRACKET expr RBRACKET
    (37) expr -> ID .
    (38) expr -> ID . LPAREN exprList RPAREN
    LBRACKET        shift and go to state 79
    DIVIDE          reduce using rule 37 (expr -> ID .)
    TIMES           reduce using rule 37 (expr -> ID .)
    MINUS           reduce using rule 37 (expr -> ID .)
    PLUS            reduce using rule 37 (expr -> ID .)
    SEMICOLON       reduce using rule 37 (expr -> ID .)
    $end            reduce using rule 37 (expr -> ID .)
    END             reduce using rule 37 (expr -> ID .)
    FUN             reduce using rule 37 (expr -> ID .)
    ELSE            reduce using rule 37 (expr -> ID .)
    NEQ             reduce using rule 37 (expr -> ID .)
    EQ              reduce using rule 37 (expr -> ID .)
    GT              reduce using rule 37 (expr -> ID .)
    GTE             reduce using rule 37 (expr -> ID .)
    LT              reduce using rule 37 (expr -> ID .)
    LTE             reduce using rule 37 (expr -> ID .)
    COMMA           reduce using rule 37 (expr -> ID .)
    RPAREN          reduce using rule 37 (expr -> ID .)
    RBRACKET        reduce using rule 37 (expr -> ID .)
    THEN            reduce using rule 37 (expr -> ID .)
    OR              reduce using rule 37 (expr -> ID .)
    AND             reduce using rule 37 (expr -> ID .)
    DO              reduce using rule 37 (expr -> ID .)
    LPAREN          shift and go to state 80


state 52

    (40) expr -> PLUS . expr
    (33) expr -> . TFLOAT LPAREN expr RPAREN
    (34) expr -> . TINT LPAREN expr RPAREN
    (35) expr -> . number
    (36) expr -> . ID LBRACKET expr RBRACKET
    (37) expr -> . ID
    (38) expr -> . ID LPAREN exprList RPAREN
    (39) expr -> . LPAREN expr RPAREN
    (40) expr -> . PLUS expr
    (41) expr -> . MINUS expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . expr PLUS expr
    (54) number -> . MINUS FLOAT
    (55) number -> . MINUS INT
    (56) number -> . FLOAT
    (57) number -> . INT
    TFLOAT          shift and go to state 47
    TINT            shift and go to state 49
    ID              shift and go to state 51
    LPAREN          shift and go to state 48
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    FLOAT           shift and go to state 54
    INT             shift and go to state 55

    expr                           shift and go to state 81
    number                         shift and go to state 50

state 53
